add:slick style

--- a/themes/my7chakras/sass/style.scss
+++ b/themes/my7chakras/sass/style.scss
@@ -72,4 +72,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "aboutaj";
 @import "blog";
 @import "slick";
+@import "slick-theme";
 
