--- a/themes/my7chakras/sass/_slick.scss
+++ b/themes/my7chakras/sass/_slick.scss
@@ -65,6 +65,8 @@
     float: left;
     height: 100%;
     min-height: 1px;
+    margin-right: 10px;
+    margin-left: 10px;
     [dir="rtl"] & {
         float: right;
     }
