--- a/themes/my7chakras/sass/_header.scss
+++ b/themes/my7chakras/sass/_header.scss
@@ -5,9 +5,8 @@
     @include box-row;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-top: 2%;
+    padding-top: 0.5%;
     align-items: center;
-    padding-bottom: 10%;
 
     @include pcandtb{
         padding-bottom: unset;
@@ -214,4 +213,17 @@ fieldset{
 
 .change-color{
     opacity: 0.5;
+}
+
+
+.sticky-button{
+    @include reset;
+    position: fixed;
+  background: none;
+  right: 5%;
+  bottom: 10%;
+  border: none;
+ @include pcandtb{
+     display: none;
+ }
 }
