add:search box to episodes and articles

--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -187,7 +187,18 @@
             display: none;
         }
     }
+.search-form fieldset label {
+    border: none;
+}
+
     }
+
+
+
+
+
+
+
 
     .post{
             &__wrapper{
