--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -168,6 +168,7 @@
     &__info{
         display: flex;
         justify-content: space-between;
+        margin-top: 70px;
     }
     &__post{
         border-radius: 15px;
