--- a/themes/my7chakras/sass/_front-page.scss
+++ b/themes/my7chakras/sass/_front-page.scss
@@ -15,6 +15,28 @@ html {
         order: 1;
     @include box-column;
 
+    .post-tags{
+        color: #ac5f80;
+
+        a{
+            font-family:$font-main;
+            font-size: 15px;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: italic;
+            line-height: 1.33;
+            letter-spacing: normal;
+            text-align: left;
+            color: #ac5f80;
+        }
+
+        a:hover{
+            color: #814760;
+
+        }
+     
+    }
+
 
     .card-container{
         width: 90%;
@@ -34,7 +56,7 @@ html {
         }
 
         .more{
-            padding: 2%;
+            padding: 6%;
             text-align: end;
 
         }
@@ -102,7 +124,7 @@ html {
         text-align: center;
         background-position-y: 7px;
         background-position-x: -150px;
-        height: 57vh;
+        height: 60vh;
 
         
         a{
@@ -128,10 +150,10 @@ html {
             }
         }
         p:nth-last-of-type(2){
-            margin-bottom: 25%;
+            margin-bottom: 20%;
             @include pcandtb{
                 @include reset;
-                width: 70%;
+                width: 90%;
                 margin: 2% auto;
             }
     
