git add search page

--- a/themes/my7chakras/sass/_footer.scss
+++ b/themes/my7chakras/sass/_footer.scss
@@ -80,6 +80,8 @@ font-family: $font-main !important;
 
    .subscription{
     display: flex;
+    justify-content: center;
+
     @include pcandtb{
         
     }
