--- a/themes/my7chakras/sass/style.scss
+++ b/themes/my7chakras/sass/style.scss
@@ -74,4 +74,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "front-page";
 @import "slick";
 @import "slick-theme";
+@import "search";
+
 
