--- a/themes/my7chakras/sass/_header.scss
+++ b/themes/my7chakras/sass/_header.scss
@@ -17,7 +17,7 @@
         width: unset;
         @include box-row;
         justify-content: flex-end;
-        width: 15%;
+        width: 20%;
         @include pcandtb{
             order: 2;
             width: auto;
@@ -85,8 +85,9 @@
             width: 15.9px;   
         }
         img{
-            width: 15.9px;
-            height: 15.9px;
+            width: 30px;
+            height: 30px;
+            padding: 0% 5%;
         }
       
     }
