add:js script to single.php

--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -427,4 +427,31 @@
                 }
             }
         }
+
+          .player__button.toggle{
+              background-color: $purple;
+              color: #ffffff;
+          }
+
+          .player__controls {
+            display: flex;
+          }
+          
+          .progress {
+            flex: 10;
+            position: relative;
+            display: flex;
+            flex-basis: 100%;
+            height: 5px;
+            transition: height 0.3s;
+            background: rgba(0,0,0,0.5);
+            cursor: ew-resize;
+          }
+          
+          .progress__filled {
+            width: 50%;
+            background: $purple;
+            flex: 0;
+            flex-basis: 50%;
+          }
     }
