--- a/themes/my7chakras/sass/_aboutaj.scss
+++ b/themes/my7chakras/sass/_aboutaj.scss
@@ -82,6 +82,8 @@
 
 h1{
    
+    font-family: $font-heading;
+    font-weight: 700;
     padding-top: 14px;
     padding-left: 20px;
     top: 170px;
@@ -205,7 +207,6 @@ h4{
     position: absolute;
     width: 185px;
     height: 125px;
-    font-family: Meticula;
     font-size: 15px;
     font-weight: normal;
     font-stretch: normal;
@@ -224,7 +225,7 @@ p{
     padding-right: 25px;
     padding-left: 25px;
     padding-top: 35px;
-    font-family: Meticula;
+    font-family: $font-main;
     font-size: 15px;
     font-weight: normal;
     font-stretch: normal;
@@ -239,7 +240,7 @@ p{
         padding-right: 134px;
         padding-left: 134px;
     
-        font-family: Meticula-Regular;
+        
         font-size: 20px;
         font-weight: normal;
         font-stretch: normal;
