add:related episodes

--- a/themes/my7chakras/sass/style.scss
+++ b/themes/my7chakras/sass/style.scss
@@ -75,5 +75,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "slick";
 @import "slick-theme";
 @import "search";
+@import "resources";
 
 
