--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -284,6 +284,7 @@
         }
         &__footer{
             @include content-wrapper;
+            margin-top: 40px;
         }
         
         .page-nav{
@@ -300,6 +301,9 @@
                 padding: 5px;
                 margin: 0;
                 box-shadow: $shadow;
+                @include spandtb{
+                    width: 47%;
+                }
                 img{
                     opacity: 0.6;
                     margin: 0;
@@ -314,15 +318,55 @@
                 }
                 div{
                     position: absolute;
-                    padding: 20px;
+                    padding: 20px 30px;
+                    @include sp{
+                        padding: 0 5px;
+                    }
                     p{
                         margin-bottom: 10px;
                         margin-top: 0;
                     }
                 }
             }
+            .prev-link{
+                &::before{
+                    content: '';
+                    display: inline-block;
+                    width: 10px;
+                    height: 17px;
+                    position: absolute;
+                    left: 10px;
+                    top: 50%;
+                    transform:translate(0,-50%);
+                    background-image: url(../../assets/images/episodes/icon-left.png);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    vertical-align: middle;
+                }
+            }
+            .next-link{
+                &::before{
+                    content: '';
+                    display: inline-block;
+                    width: 10px;
+                    height: 17px;
+                    position: absolute;
+                    right: 10px;
+                    top: 50%;
+                    transform:translate(0,-50%);
+                    background-image: url(../../assets/images/episodes/icon-right.png);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    vertical-align: middle;
+                }
+            }
             &Title{
                 font-size: 17px;
+            }
+            &Content{
+                @include sp{
+                    font-size: 13px;
+                }
             }
         }
         &__related{
