--- a/themes/my7chakras/sass/_front-page.scss
+++ b/themes/my7chakras/sass/_front-page.scss
@@ -40,13 +40,17 @@
 
 
     .card-container{
-        width: 90%;
+        width: 78%;
         margin: 5% auto;
         box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
         border-radius: 10px;
         p{
             padding: 2% 5%;
             line-height: 1.18;
+            margin: 0px;
+
+            
+            
         }
 
         h1{
@@ -75,6 +79,11 @@
             position: relative;  
             width: 100%;
             height: 321px;
+
+
+            img{
+                height: 321px;
+            }
   
 
             div{
