--- a/themes/my7chakras/sass/_resources.scss
+++ b/themes/my7chakras/sass/_resources.scss
@@ -11,5 +11,10 @@
             font-size: 21px;
             line-height: 25px;
         }
+        p{
+            @include sp{
+            width: 800px;
+        }
+        }
     }
 }
