change on header icon

--- a/themes/my7chakras/sass/_header.scss
+++ b/themes/my7chakras/sass/_header.scss
@@ -191,13 +191,12 @@ fieldset{
 
 .close-icon{
     .icon-menu:after{
-        
         font-size: 2.5rem;
         content: "-";
         @include pcandtb{
             font-size: 1.2rem;
             transition: 1s all;
-            content: ">";
+            content: "<";
             transform: rotate(90deg);
         } 
     }
