--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -256,6 +256,7 @@
                 background-color: #ffffff;
                 box-shadow: $shadow;
                 align-items: center;
+                justify-content: space-between;
         }
         div{
             display: flex;
