--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -265,6 +265,9 @@
         a{
             display: flex;
             align-items: center;
+            @include spandtb{
+
+            }
             @include pc{
                 border-radius: 10px;
                 padding: 5px 15px;
