--- a/themes/my7chakras/sass/_aboutaj.scss
+++ b/themes/my7chakras/sass/_aboutaj.scss
@@ -144,7 +144,7 @@ h1{
         @include pc{
 
             height: 622px;
-            background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/ABOUT@2x.png);
+            background-image: url(http://my7chakras.van.cp.academy.red/wp-content/uploads/2020/03/ABOUT@2x.png);
             background-repeat: no-repeat;
             background-size: 110%;
             width: 100%;
@@ -154,7 +154,7 @@ h1{
 
                 @include tb{
                 height: 410px;
-                background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/Group-1185@2x-1.png); 
+                background-image: url(http://my7chakras.van.cp.academy.red/wp-content/uploads/2020/03/Group-1185@2x-1-1536x633-1.png); 
                 background-repeat: no-repeat;
                 background-size: 100%;
                 width: 100%;
