--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -266,7 +266,7 @@
             display: flex;
             align-items: center;
             @include spandtb{
-
+                margin: 0 10px;
             }
             @include pc{
                 border-radius: 10px;
@@ -296,7 +296,7 @@
     align-items: center;
     border-radius: 10px;
     @include pc{
-        width: 750px;
+        width: 50vw;
         height: 60px;
     }
     button{
