--- a/themes/my7chakras/sass/_aboutaj.scss
+++ b/themes/my7chakras/sass/_aboutaj.scss
@@ -130,6 +130,11 @@ h1{
     
 }
 
+.wp-image-41 {
+    display: none;
+
+}
+
 .gradient-box{
     
         background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/Group-1185@2x-1.png);
