--- a/themes/my7chakras/sass/_about.scss
+++ b/themes/my7chakras/sass/_about.scss
@@ -3,7 +3,7 @@
     background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/Mask-Group-35.png);
     background-repeat: no-repeat;
     background-position:right ;
-    width: 375px;
+    width: 100%;
     height: 285px;
     border-radius: 5px;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
@@ -30,6 +30,7 @@
     width: 100%;
     margin: auto;
     padding-top: 25px;
+    justify-content: center;
 
     @include tb{
     display: flex;
@@ -188,7 +189,6 @@ figcaption{
 
     @include sp {
         position: relative;
-        margin-left: 115px;
     }
 } 
 .entry-content{
