--- a/themes/my7chakras/sass/_about.scss
+++ b/themes/my7chakras/sass/_about.scss
@@ -1,6 +1,6 @@
 .about{
     .bg-img {
-    background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/Mask-Group-35.png);
+    background-image: url(http://my7chakras.van.cp.academy.red/wp-content/uploads/2020/03/Mask-Group-35.png);
     background-repeat: no-repeat;
     background-position:right ;
     width: 100%;
@@ -10,7 +10,7 @@
     background-color: #ffffff;
 
     @include pcandtb{
-        background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/Mask-Group-35@2x.png);
+        background-image: url(http://my7chakras.van.cp.academy.red/wp-content/uploads/2020/03/Mask-Group-35@2x.png);
         background-repeat: no-repeat;
         background-position: 100% 96%;
         padding-top: 90px;
