--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -202,6 +202,7 @@
             &__wrapper{
                 @include content-wrapper;
                 margin-top: 40px;
+                margin-bottom: 30px;
             }
             &__title{
                 line-height: 1.2;
